--- a/source/posts/2017/02-27-podcast-05-08.html.md
+++ b/source/posts/2017/02-27-podcast-05-08.html.md
@@ -1,13 +1,13 @@
 ---
-title: "08 выпуск 05 сезона. Rails 5.1.0.beta1, Ruby `reject!`, Brains, Won WebAssembly logo contest, Babel-preset-env, AR.js и прочее"
+title: "08 выпуск 05 сезона. Rails 5.1.0.beta1, Ruby reject!, Brains, Won WebAssembly logo contest, Babel-preset-env, AR.js и прочее"
 date: 2017-02-27
 tags:
  - podcasts
 audio_url: "http://mp3.rwpod.com/podcasts/05/0508.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.08/0508.mp3"
 audio_format: "audio/mpeg"
-audio_length: 43686696
-duration: "00:45:24"
+audio_length: 58267132
+duration: "01:00:35"
 small_icon: mic
 main_image: "/images/static/05/0508.png"
 ---
@@ -16,7 +16,7 @@ main_image: "/images/static/05/0508.png"
 
 ## Ruby
 
- - [Rails 5.1.0.beta1](http://weblog.rubyonrails.org/2017/2/23/Rails-5-1-beta1/), [15 Weird Things About Ruby That You Should Know](http://www.blackbytes.info/2017/02/weird-ruby/) и [Ruby `reject!`](http://accidentallyquadratic.tumblr.com/post/157496054437/ruby-reject)
+ - [Rails 5.1.0.beta1](http://weblog.rubyonrails.org/2017/2/23/Rails-5-1-beta1/), [15 Weird Things About Ruby That You Should Know](http://www.blackbytes.info/2017/02/weird-ruby/) и [Ruby reject!](http://accidentallyquadratic.tumblr.com/post/157496054437/ruby-reject)
  - [Using PhantomJS to Capture Analytics for a Rails Email Template](http://brandonhilkert.com/blog/using-phantomjs-to-capture-analytics-for-a-rails-email-template/), [Lessons learned and Code Smells detected with Reek](https://review.ebertapp.io/lessons-learned-and-code-smells-detected-with-reek-ca9374a3eece), [Objects as Ruby Hash Keys](http://blog.honeybadger.io/objects-as-ruby-hash-keys/) и [Creating Powerful Command Line Tools in Ruby](https://blog.codeship.com/creating-powerful-command-line-tools-in-ruby/)
  - [KMS - simple and powerful Ruby on Rails CMS for developers](http://getkms.com/), [Brains - Feedforward neural network toolkit for JRuby](https://github.com/jedld/brains-jruby) и [Working with Internationalization (video)](https://www.driftingruby.com/episodes/working-with-internationalization)
 
