--- a/source/posts/2017/03-13-podcast-05-10.html.md
+++ b/source/posts/2017/03-13-podcast-05-10.html.md
@@ -1,5 +1,5 @@
 ---
-title: "10 выпуск 05 сезона. React Router v4, Ruby 2D, Rack::Freeze, Quiet.js, Blurify.js и прочее"
+title: "10 выпуск 05 сезона. React Router v4, Ruby 2D, Rack::Freeze, Scrolling on the web, Quiet.js, Blurify.js, Numscrubber.js и прочее"
 date: 2017-03-13
 tags:
  - podcasts
@@ -22,7 +22,8 @@ main_image: "/images/static/05/0510.png"
 
 ## JavaScript
 
- - [React Router v4.0.0](https://reacttraining.com/react-router/), [Build your own React Router v4](https://tylermcginnis.com/build-your-own-react-router-v4/)
- - [Quiet.js - transmit and receive data in the browser at 44.1kHz](https://quiet.github.io/quiet-js/), [Blurify.js - a library to blurred pictures, support graceful downgrade from css mode to canvas mode](https://github.com/JustClear/blurify) и [LayerJS - UI composition & animation library for websites and webapps](https://layerjs.org)
+ - [React Router v4.0.0](https://reacttraining.com/react-router/), [Build your own React Router v4](https://tylermcginnis.com/build-your-own-react-router-v4/), [Hey! Have you heard about Vue.js?](https://medium.com/@kevin.buhrer/hey-have-you-heard-about-vue-js-8075b7c06cae) и [Vue.js Component Style Guide](https://github.com/pablohpsilva/vuejs-component-style-guide)
+ - [Scrolling on the web: A primer](https://blogs.windows.com/msedgedev/2017/03/08/scrolling-on-the-web/), [Should you learn [insert shiny new tool]?](https://zellwk.com/blog/learn-tools/) и [WebAssembly: Under the hood with Mozilla](https://www.youtube.com/watch?v=o52_5qAJhNg)
+ - [Quiet.js - transmit and receive data in the browser at 44.1kHz](https://quiet.github.io/quiet-js/), [Numscrubber.js - change values of input numbers by dragging the mouse left & right](https://mburakerman.github.io/numscrubberjs/), [Blurify.js - a library to blurred pictures, support graceful downgrade from css mode to canvas mode](https://github.com/JustClear/blurify) и [LayerJS - UI composition & animation library for websites and webapps](https://layerjs.org)
 
 READMORE
