--- a/source/posts/2017/04-10-podcast-05-14.html.md
+++ b/source/posts/2017/04-10-podcast-05-14.html.md
@@ -1,5 +1,5 @@
 ---
-title: "14 выпуск 05 сезона.  и прочее"
+title: "14 выпуск 05 сезона. Hanami v1.0.0, React v15.5.0, Fae, UserSwitch, Rutilus, Reactour, Tippy.js, Embedo и прочее"
 date: 2017-04-10
 tags:
  - podcasts
@@ -16,24 +16,14 @@ main_image: "/images/static/05/0514.png"
 
 ## Ruby
 
- - [Hanami v1.0.0](http://hanamirb.org/blog/2017/04/06/announcing-hanami-100.html)
- - [Ruby 2.4 has default basename for Tempfile#create](http://blog.bigbinary.com/2017/04/04/ruby-2-4-has-default-basename-for-tempfile-create.html)
- - [Configuring New Rails Projects With .railsrc and Templates](http://pixelatedworks.com/articles/configuring_new_rails_projects_with_railsrc_and_templates/)
- - [Reliable notifications between two apps or microservices](http://blog.arkency.com/2017/04/reliable-notifications-between-two-systems/)
- - [Unit testing with VCR](https://revs.runtime-revolution.com/unit-testing-with-vcr-5dd2bb5c9012)
- - [What is the best strategy for encrypting files in Ruby](https://blog.active-bridge.com/what-is-the-best-strategy-for-encrypting-files-in-ruby#post)
- - [5 Tips for More Effective Capybara Tests](https://semaphoreci.com/community/tutorials/5-tips-for-more-effective-capybara-tests)
- - [Switch users with UserSwitch](https://blog.kodius.io/2017/04/07/userswitch/)
- - [Fae - a flexible, open source, Rails CMS engine](https://www.faecms.com/)
- - [Run Test Run by Vlad Dem](https://speakerdeck.com/palkan/rubyconfby-minsk-2017-run-test-run)
+ - [Hanami v1.0.0](http://hanamirb.org/blog/2017/04/06/announcing-hanami-100.html), [Ruby 2.4 has default basename for Tempfile#create](http://blog.bigbinary.com/2017/04/04/ruby-2-4-has-default-basename-for-tempfile-create.html) и [Configuring New Rails Projects With .railsrc and Templates](http://pixelatedworks.com/articles/configuring_new_rails_projects_with_railsrc_and_templates/)
+ - [Reliable notifications between two apps or microservices](http://blog.arkency.com/2017/04/reliable-notifications-between-two-systems/), [What is the best strategy for encrypting files in Ruby](https://blog.active-bridge.com/what-is-the-best-strategy-for-encrypting-files-in-ruby#post) и [5 Tips for More Effective Capybara Tests](https://semaphoreci.com/community/tutorials/5-tips-for-more-effective-capybara-tests)
+ - [Run Test Run by Vlad Dem](https://speakerdeck.com/palkan/rubyconfby-minsk-2017-run-test-run), [Fae - a flexible, open source, Rails CMS engine](https://www.faecms.com/) и [Switch users with UserSwitch](https://blog.kodius.io/2017/04/07/userswitch/)
 
 ## JavaScript
 
- - [React v15.5.0](https://facebook.github.io/react/blog/2017/04/07/react-v15.5.0.html)
- - [Why I'm excited about GlimmerJS](https://hackernoon.com/why-im-excited-about-glimmerjs-3631bd0c95c4)
- - [The Glimmer VM: Boots Fast and Stays Fast](http://yehudakatz.com/2017/04/05/the-glimmer-vm-boots-fast-and-stays-fast/)
- - [Webpack and Rollup: the same but different](https://medium.com/webpack/webpack-and-rollup-the-same-but-different-a41ad427058c)
- - [Rutilus - a free, open-source analytics application](https://gmrutilus.github.io/)
- - [Lance - a node based game server](http://lance.gg/)
+ - [React v15.5.0](https://facebook.github.io/react/blog/2017/04/07/react-v15.5.0.html), [Webpack and Rollup: the same but different](https://medium.com/webpack/webpack-and-rollup-the-same-but-different-a41ad427058c) и [Top Monospace Fonts For Developers](https://freebiesupply.com/blog/top-monospace-fonts-for-developers/)
+ - [Why I'm excited about GlimmerJS](https://hackernoon.com/why-im-excited-about-glimmerjs-3631bd0c95c4), [The Glimmer VM: Boots Fast and Stays Fast](http://yehudakatz.com/2017/04/05/the-glimmer-vm-boots-fast-and-stays-fast/) и [Grid Garden](http://cssgridgarden.com/)
+ - [Rutilus - a free, open-source analytics application](https://gmrutilus.github.io/), [Lance - a node based game server](http://lance.gg/), [Reactour - tourist Guide into your React Components](https://elrumordelaluz.github.io/reactour/), [Tippy.js - a lightweight, pure JavaScript tooltip library](https://atomiks.github.io/tippyjs/) и [Embedo - a simple, fast, lightweight and standalone social media content embedder plugin for web](https://shobhitsharma.github.io/embedo/)
 
 READMORE
