--- a/source/posts/2017/04-24-podcast-05-16.html.md
+++ b/source/posts/2017/04-24-podcast-05-16.html.md
@@ -17,6 +17,7 @@ main_image: "/images/static/05/0516.png"
 ## Ruby
 
  - [Saving multiple models with Form Objects and Transactions](https://revs.runtime-revolution.com/saving-multiple-models-with-form-objects-and-transactions-2c26f37f7b9a)
+ - [Reusable Validations In Rails Form Objects](http://freeletics.engineering/2017/04/19/reusable-validations-in-rails-form-objects.html)
  - [ACLI - Action Cable command line interface written in mRuby](https://github.com/palkan/acli)
 
 ## JavaScript
