--- a/source/posts/2017/05-01-podcast-05-17.html.md
+++ b/source/posts/2017/05-01-podcast-05-17.html.md
@@ -16,29 +16,14 @@ main_image: "/images/static/05/0517.png"
 
 ## Ruby
 
- - [Rails 5.1: Loving JavaScript, System Tests, Encrypted Secrets, and more](http://weblog.rubyonrails.org/2017/4/27/Rails-5-1-final/)
- - [Rails 5.1 has introduced Date#all_day helper](http://blog.bigbinary.com/2017/04/24/rails-5-1-has-introduced-date-all_day-helper.html)
- - [Hello Sidekiq 5.0](http://www.mikeperham.com/2017/04/25/hello-sidekiq-5.0/)
- - [Oj 3.0.0](http://www.ohler.com/oj/index.html)
- - [Bundler’s new update options](https://depfu.io/blog/2017/04/25/bundlers-new-update-options)
- - [Ruby’s puts is not atomic](https://hackernoon.com/rubys-puts-is-not-atomic-889c57fc9a28)
- - [Search by radius in Redis](http://blog.primehammer.com/2017/04/25/search-by-radius-in-redis/)
- - [Helix allows you to write Ruby classes in Rust](https://usehelix.com/)
- - [Stop Using Case Statements in Ruby](http://www.blackbytes.info/2017/04/stop-using-case-statements-in-ruby/)
- - [Postal - a complete and fully featured mail server for use by websites & web servers](https://github.com/atech/postal)
- - [Mastodon - a free, open-source social network](https://mastodon.social/about)
- - [Fastlane - a tool for iOS, Mac, and Android developers to automate tedious tasks](https://fastlane.tools/)
+ - [Rails 5.1: Loving JavaScript, System Tests, Encrypted Secrets, and more](http://weblog.rubyonrails.org/2017/4/27/Rails-5-1-final/), [Rails 5.1 has introduced Date#all_day helper](http://blog.bigbinary.com/2017/04/24/rails-5-1-has-introduced-date-all_day-helper.html), [Hello Sidekiq 5.0](http://www.mikeperham.com/2017/04/25/hello-sidekiq-5.0/), [Oj 3.0.0](http://www.ohler.com/oj/index.html) и [Bundler’s new update options](https://depfu.io/blog/2017/04/25/bundlers-new-update-options)
+ - [Postgres tips for Rails developers](https://www.citusdata.com/blog/2017/04/28/postgres-tips-for-rails/), [Search by radius in Redis](http://blog.primehammer.com/2017/04/25/search-by-radius-in-redis/), [Ruby’s puts is not atomic](https://hackernoon.com/rubys-puts-is-not-atomic-889c57fc9a28) и [Stop Using Case Statements in Ruby](http://www.blackbytes.info/2017/04/stop-using-case-statements-in-ruby/)
+ - [Helix allows you to write Ruby classes in Rust](https://usehelix.com/), [Postal - a complete and fully featured mail server for use by websites & web servers](https://github.com/atech/postal), [Mastodon - a free, open-source social network](https://mastodon.social/about) и [Fastlane - a tool for iOS, Mac, and Android developers to automate tedious tasks](https://fastlane.tools/)
 
 ## JavaScript
 
- - [Angular 4.1.0 Now Available](http://angularjs.blogspot.com/2017/04/angular-410-now-available.html)
- - [Announcing TypeScript 2.3](https://blogs.msdn.microsoft.com/typescript/2017/04/27/announcing-typescript-2-3/)
- - [React VR lets you build VR apps using only JavaScript](https://facebook.github.io/react-vr/)
- - [React Sketch.app - render React components to Sketch](http://airbnb.io/react-sketchapp/)
- - [Best UI Frameworks for your new React.js App](https://hackernoon.com/the-coolest-react-ui-frameworks-for-your-new-react-app-ad699fffd651)
- - [Stop using CSS in JavaScript for web development: 9 fairy tales](https://medium.com/@gajus/stop-using-css-in-javascript-for-web-development-fa32fb873dcc)
- - [CSS in JavaScript: The future of component-based styling](https://medium.freecodecamp.com/css-in-javascript-the-future-of-component-based-styling-70b161a79a32)
- - [Tamper Chrome - a Chrome extension that allows you to modify HTTP requests on the fly and aid on web security testing](https://github.com/google/tamperchrome)
- - [React Move - beautifully and deterministically animate anything in React](https://react-move.js.org/)
+ - [Angular 4.1.0 Now Available](http://angularjs.blogspot.com/2017/04/angular-410-now-available.html), [Announcing TypeScript 2.3](https://blogs.msdn.microsoft.com/typescript/2017/04/27/announcing-typescript-2-3/)
+ - [Stop using CSS in JavaScript for web development: 9 fairy tales](https://medium.com/@gajus/stop-using-css-in-javascript-for-web-development-fa32fb873dcc), [CSS in JavaScript: The future of component-based styling](https://medium.freecodecamp.com/css-in-javascript-the-future-of-component-based-styling-70b161a79a32) и [Tamper Chrome - a Chrome extension that allows you to modify HTTP requests on the fly and aid on web security testing](https://github.com/google/tamperchrome)
+ - [React Sketch.app - render React components to Sketch](http://airbnb.io/react-sketchapp/), [React VR lets you build VR apps using only JavaScript](https://facebook.github.io/react-vr/), [Best UI Frameworks for your new React.js App](https://hackernoon.com/the-coolest-react-ui-frameworks-for-your-new-react-app-ad699fffd651) и [React Move - beautifully and deterministically animate anything in React](https://react-move.js.org/)
 
 READMORE
