--- a/source/posts/2017/05-01-podcast-05-17.html.md
+++ b/source/posts/2017/05-01-podcast-05-17.html.md
@@ -1,5 +1,5 @@
 ---
-title: "17 выпуск 05 сезона.  и прочее"
+title: "17 выпуск 05 сезона. Rails 5.1, Sidekiq 5.0, Oj 3.0.0, Angular 4.1.0, TypeScript 2.3, Helix, Mastodon, React Sketch.app и прочее"
 date: 2017-05-01
 tags:
  - podcasts
