--- a/source/posts/2017/05-01-podcast-05-17.html.md
+++ b/source/posts/2017/05-01-podcast-05-17.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0517.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.17/0517.mp3"
 audio_format: "audio/mpeg"
-audio_length: 33570614
-duration: "00:34:52"
+audio_length: 46824244
+duration: "00:48:40"
 small_icon: mic
 main_image: "/images/static/05/0517.png"
 ---
@@ -22,8 +22,12 @@ main_image: "/images/static/05/0517.png"
 
 ## JavaScript
 
- - [Angular 4.1.0 Now Available](http://angularjs.blogspot.com/2017/04/angular-410-now-available.html), [Announcing TypeScript 2.3](https://blogs.msdn.microsoft.com/typescript/2017/04/27/announcing-typescript-2-3/)
+ - [Angular 4.1.0 Now Available](http://angularjs.blogspot.com/2017/04/angular-410-now-available.html) и [Announcing TypeScript 2.3](https://blogs.msdn.microsoft.com/typescript/2017/04/27/announcing-typescript-2-3/)
  - [Stop using CSS in JavaScript for web development: 9 fairy tales](https://medium.com/@gajus/stop-using-css-in-javascript-for-web-development-fa32fb873dcc), [CSS in JavaScript: The future of component-based styling](https://medium.freecodecamp.com/css-in-javascript-the-future-of-component-based-styling-70b161a79a32) и [Tamper Chrome - a Chrome extension that allows you to modify HTTP requests on the fly and aid on web security testing](https://github.com/google/tamperchrome)
  - [React Sketch.app - render React components to Sketch](http://airbnb.io/react-sketchapp/), [React VR lets you build VR apps using only JavaScript](https://facebook.github.io/react-vr/), [FixedDataTable - a React component for building and presenting data in a flexible, powerful way](https://facebook.github.io/fixed-data-table/), [Best UI Frameworks for your new React.js App](https://hackernoon.com/the-coolest-react-ui-frameworks-for-your-new-react-app-ad699fffd651) и [React Move - beautifully and deterministically animate anything in React](https://react-move.js.org/)
+
+## Conferences
+
+ - [Ruby Meditation #15](http://www.rubymeditation.com/)
 
 READMORE
