--- a/source/posts/2017/05-15-podcast-05-19.html.md
+++ b/source/posts/2017/05-15-podcast-05-19.html.md
@@ -22,11 +22,8 @@ main_image: "/images/static/05/0519.png"
 
 ## JavaScript
 
- - [Announcing the new webpack CLI](https://medium.com/webpack/announcing-the-new-webpack-cli-75ce1d9b8663)
- - [Distributing a self-replicating malicious code using NPM](https://medium.com/@gajus/distributing-a-self-replicating-malicious-code-using-npm-cf2bf3209293)
- - [Making Maps With React](https://blog.webkid.io/making-maps-with-react/)
- - [JavaScript implementations of different famous Computer Science algorithms](https://mgechev.github.io/javascript-algorithms/)
- - [The Hitchhiker’s Guide to d3.js](https://medium.com/@enjalot/the-hitchhikers-guide-to-d3-js-a8552174733a)
- - [Britecharts - a client-side reusable Charting Library based on D3.js](http://eventbrite.github.io/britecharts/)
+ - [Announcing the new webpack CLI](https://medium.com/webpack/announcing-the-new-webpack-cli-75ce1d9b8663), [Methods for Contrasting Text Against Backgrounds](https://css-tricks.com/methods-contrasting-text-backgrounds/) и [The Issue with Preprocessing CSS Custom Properties](https://css-tricks.com/issue-preprocessing-css-custom-properties/)
+ - [Distributing a self-replicating malicious code using NPM](https://medium.com/@gajus/distributing-a-self-replicating-malicious-code-using-npm-cf2bf3209293), [The Hitchhiker’s Guide to d3.js](https://medium.com/@enjalot/the-hitchhikers-guide-to-d3-js-a8552174733a) и [Making Maps With React](https://blog.webkid.io/making-maps-with-react/)
+ - [JavaScript implementations of different famous Computer Science algorithms](https://mgechev.github.io/javascript-algorithms/), [Britecharts - a client-side reusable Charting Library based on D3.js](http://eventbrite.github.io/britecharts/), [Pingy CLI - simple frontend build tool](https://pin.gy/cli/) и [Sticky Sidebar - jQuery plugin for making smart and high performance sticky sidebars](https://abouolia.github.io/sticky-sidebar/)
 
 READMORE
