--- a/source/posts/2017/05-15-podcast-05-19.html.md
+++ b/source/posts/2017/05-15-podcast-05-19.html.md
@@ -1,13 +1,13 @@
 ---
-title: "19 выпуск 05 сезона. Rails 5.0.3 и 5.1.1, GraphQL в Rails, Serverless-ruby,  и прочее"
+title: "19 выпуск 05 сезона. Rails 5.0.3 и 5.1.1, GraphQL в Rails, Serverless-ruby, Webpack CLI, Britecharts, Sticky Sidebar и прочее"
 date: 2017-05-15
 tags:
  - podcasts
 audio_url: "http://mp3.rwpod.com/podcasts/05/0519.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.19/0519.mp3"
 audio_format: "audio/mpeg"
-audio_length: 45262488
-duration: "00:47:02"
+audio_length: 37875930
+duration: "00:39:21"
 small_icon: mic
 main_image: "/images/static/05/0519.png"
 ---
