--- a/source/posts/2017/05-30-podcast-05-21.html.md
+++ b/source/posts/2017/05-30-podcast-05-21.html.md
@@ -21,7 +21,9 @@ main_image: "/images/static/05/0521.png"
  - [Practical Graph Theory in Ruby](http://www.blackbytes.info/2017/05/graph-theory-in-ruby/)
  - [Everything you should know about Ruby Splats](https://alexcastano.com/everything-about-ruby-splats/)
  - [4 Ways to Secure Your Authentication System](https://ducktypelabs.com/4-ways-to-secure-authentication/)
+ - [Phoenix is better but Rails is more popular](https://hackernoon.com/phoenix-is-better-but-rails-is-more-popular-8975d5e68879)
  - [RailsConf 2017 (videos)](http://confreaks.tv/events/railsconf2017)
+ - [DataTables (video)](https://www.driftingruby.com/episodes/datatables)
 
 ## JavaScript
 
