--- a/source/posts/2017/05-30-podcast-05-21.html.md
+++ b/source/posts/2017/05-30-podcast-05-21.html.md
@@ -29,5 +29,6 @@ main_image: "/images/static/05/0521.png"
 
  - [Switching From React To Vue.js](http://vuejsdevelopers.com/2017/05/28/switch-from-react-to-vue-js/)
  - [How to Migrate from AngularJS to Vue](https://medium.com/@npayot/how-to-migrate-from-angularjs-to-vue-4a1e9721bea8)
+ - [React Native and the biggest pitfalls you will face using it](https://www.youtube.com/watch?v=9UahaciXAbU)
 
 READMORE
