--- a/source/posts/2017/06-05-podcast-05-22.html.md
+++ b/source/posts/2017/06-05-podcast-05-22.html.md
@@ -1,5 +1,5 @@
 ---
-title: "22 выпуск 05 сезона.  и прочее"
+title: "22 выпуск 05 сезона. Exploring Sinatra, Rails DB, Goodbye PNaCl, Hello WebAssembly, Amplitude.js, Timeline.js и прочее"
 date: 2017-06-05
 tags:
  - podcasts
@@ -16,19 +16,12 @@ main_image: "/images/static/05/0522.png"
 
 ## Ruby
 
- - [Writing Ruby gems with Rust and Helix](https://blog.dnsimple.com/2017/05/writing-ruby-gems-with-rust-and-helix/)
- - [Exploring Sinatra](http://opensourceforu.com/2017/06/exploring-sinatra/)
- - [Using React Inside Your Rails Apps](https://blog.codeship.com/using-react-inside-your-rails-apps/)
- - [Testing cookies in Rails](http://blog.arkency.com/2017/06/testing-cookies-in-rails/)
- - [GraphQL Ruby Error Handling](http://tech.eshaiju.in/blog/2017/05/31/graphql-ruby-error-handling/)
- - [Rails DB - Rails Database Viewer and SQL Query Runner](https://github.com/igorkasyanchuk/rails_db)
+ - [Exploring Sinatra](http://opensourceforu.com/2017/06/exploring-sinatra/), [Writing Ruby gems with Rust and Helix](https://blog.dnsimple.com/2017/05/writing-ruby-gems-with-rust-and-helix/) и [Using React Inside Your Rails Apps](https://blog.codeship.com/using-react-inside-your-rails-apps/)
+ - [GraphQL Ruby Error Handling](http://tech.eshaiju.in/blog/2017/05/31/graphql-ruby-error-handling/), [Testing cookies in Rails](http://blog.arkency.com/2017/06/testing-cookies-in-rails/) и [Rails DB - Rails Database Viewer and SQL Query Runner](https://github.com/igorkasyanchuk/rails_db)
 
 ## JavaScript
 
- - [Goodbye PNaCl, Hello WebAssembly!](https://blog.chromium.org/2017/05/goodbye-pnacl-hello-webassembly.html)
- - [Put your Electron app on a diet with Electrino](https://medium.com/dailyjs/put-your-electron-app-on-a-diet-with-electrino-c7ffdf1d6297)
- - [It’s OK to Still Use Angular 1 in 2017](https://www.alexkras.com/its-ok-to-still-use-angular-1-in-2017/)
- - [Yarn determinism](https://yarnpkg.com/blog/2017/05/31/determinism/)
- - [Ender - open module JavaScript framework](http://enderjs.com/)
+ - [Goodbye PNaCl, Hello WebAssembly!](https://blog.chromium.org/2017/05/goodbye-pnacl-hello-webassembly.html), [It’s OK to Still Use Angular 1 in 2017](https://www.alexkras.com/its-ok-to-still-use-angular-1-in-2017/) и [Yarn determinism](https://yarnpkg.com/blog/2017/05/31/determinism/)
+ - [Put your Electron app on a diet with Electrino](https://medium.com/dailyjs/put-your-electron-app-on-a-diet-with-electrino-c7ffdf1d6297), [Ender - open module JavaScript framework](http://enderjs.com/), [Amplitude.js - the HTML5 Audio Player for the modern era](https://521dimensions.com/open-source/amplitudejs), [O - a javascript dependency injection, builder/container and in-browser loader/transpiler/bundler](https://greenhouse.gardenhq.io/o/) и [Timeline.js - easily creates timeline slider](https://ilkeryilmaz.github.io/timelinejs/)
 
 READMORE
