--- a/source/posts/2017/06-05-podcast-05-22.html.md
+++ b/source/posts/2017/06-05-podcast-05-22.html.md
@@ -24,4 +24,10 @@ main_image: "/images/static/05/0522.png"
  - [Goodbye PNaCl, Hello WebAssembly!](https://blog.chromium.org/2017/05/goodbye-pnacl-hello-webassembly.html), [It’s OK to Still Use Angular 1 in 2017](https://www.alexkras.com/its-ok-to-still-use-angular-1-in-2017/) и [Yarn determinism](https://yarnpkg.com/blog/2017/05/31/determinism/)
  - [Put your Electron app on a diet with Electrino](https://medium.com/dailyjs/put-your-electron-app-on-a-diet-with-electrino-c7ffdf1d6297), [Ender - open module JavaScript framework](http://enderjs.com/), [Amplitude.js - the HTML5 Audio Player for the modern era](https://521dimensions.com/open-source/amplitudejs), [O - a javascript dependency injection, builder/container and in-browser loader/transpiler/bundler](https://greenhouse.gardenhq.io/o/) и [Timeline.js - easily creates timeline slider](https://ilkeryilmaz.github.io/timelinejs/)
 
+## В гостях - Oleg Antonyan
+
+ - [Blog](http://undefined-reference.org/)
+ - [Github](https://github.com/olegantonyan)
+ - [Twitter](https://twitter.com/oleg_antonyan)
+
 READMORE
