--- a/source/posts/2017/06-12-podcast-05-23.html.md
+++ b/source/posts/2017/06-12-podcast-05-23.html.md
@@ -17,7 +17,7 @@ main_image: "/images/static/05/0523.png"
 ## Ruby
 
  - [Rubygems Monthly: Sinatra 2, Bundler 1.15, Rubocop, CanCanCan 2, Devise, Puma and ActsAsTaggableOn 5](https://gemnasium.com/blog/rubygems-monthly-sinatra-2-bundler-rubocop-cancancan-devise-puma-acts-as-taggable-on/), [Speeding Up Rendering Rails Pages with render_async](https://semaphoreci.com/blog/2017/06/08/speeding-up-rails-pages-with-render-async.html) и [Debugging Rails views in production](https://dalibornasevic.com/posts/79-debugging-rails-views-in-production)
- - [5+1 Ruby Gems Which Can Cause You Troubles](https://blog.rubyroidlabs.com/2017/02/trouble-ruby-gems/), [How to deal with major Ruby on Rails upgrades (like moving from 4.1 to 5.1)](https://gemnasium.com/blog/how-to-deal-with-major-ruby-on-rails-upgrades/) и [Acceptance testing using actors/personas](http://blog.arkency.com/2017/06/acceptance-testing-ruby-using-actors-personas/)
+ - [Introducing moby project: a new open-source project to advance the software containerization movement](https://blog.docker.com/2017/04/introducing-the-moby-project/), [Open Service Broker API](https://www.openservicebrokerapi.org/) и [Open API Initiative](https://www.openapis.org/)
  - [Why you should probably avoid mixins](http://undefined-reference.org/2017/06/10/why-you-should-probably-avoid-mixins.html), [N + 1 Control](https://github.com/palkan/n_plus_one_control) и [Corneal allows you to quickly generate a Sinatra template with Rails-like simplicity](https://thebrianemory.github.io/corneal/)
 
 ## JavaScript
