--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -16,8 +16,11 @@ main_image: "/images/static/05/0524.png"
 
 ## Ruby
 
+ - [Rails to Hanami](http://io.bilby91.com/posts/rails-to-hanami)
  - [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
  - [Full Stack Automation with Ruby](http://fullstackautomationwithruby.com/)
+ - [Managing Rails tasks such as 'db:migrate' and 'db:seed' on Kubernetes while performing rolling deployments](http://blog.bigbinary.com/2017/06/16/managing-rails-tasks-such-as-db-migrate-and-db-seed-on-kuberenetes-while-performing-rolling-deployments.html)
+ - [GoF design patterns in Ruby](https://github.com/davidgf/design-patterns-in-ruby)
 
 ## JavaScript
 
