--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -16,11 +16,16 @@ main_image: "/images/static/05/0524.png"
 
 ## Ruby
 
+ - [Ruby 2.4 added Hash#transform_values and its destructive version from Active Support](https://blog.bigbinary.com/2017/06/14/ruby-2-4-added-hash-transform-values-and-its-destructive-version-from-active-support.html)
+ - [Ruby 2.4 allows to customize suffix of the rotated log files](http://blog.bigbinary.com/2017/06/15/ruby-2-4-allows-to-customize-suffix-of-the-rotated-log-files.html)
+ - [Common Table Expressions in ActiveRecord: A Case Study of Quantiles](https://sonnym.github.io/2017/06/05/common-table-expressions-in-activerecord-a-case-study-of-quantiles/)
  - [Rails to Hanami](http://io.bilby91.com/posts/rails-to-hanami)
+ - [From Rails to Hanami: Views](https://blog.codeminer42.com/from-rails-to-hanami-views-66d27bcba404)
  - [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
  - [Full Stack Automation with Ruby](http://fullstackautomationwithruby.com/)
  - [Managing Rails tasks such as 'db:migrate' and 'db:seed' on Kubernetes while performing rolling deployments](http://blog.bigbinary.com/2017/06/16/managing-rails-tasks-such-as-db-migrate-and-db-seed-on-kuberenetes-while-performing-rolling-deployments.html)
  - [GoF design patterns in Ruby](https://github.com/davidgf/design-patterns-in-ruby)
+ - [Demystifying Rails (book)](https://launchschool.com/books/demystifying_rails)
 
 ## JavaScript
 
