--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -29,7 +29,8 @@ main_image: "/images/static/05/0524.png"
 
 ## JavaScript
 
-
+ - [Atom 1.18](http://blog.atom.io/2017/06/13/atom-1-18.html)
+ - [Five ES6 features to make your life easier](https://engineering.musefind.com/five-es6-features-to-make-your-life-easier-8c6a9518219f)
 
 ## В гостях - Anton Davydov
 
