--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -1,5 +1,5 @@
 ---
-title: "24 выпуск 05 сезона.  и прочее"
+title: "24 выпуск 05 сезона. MJIT, Atom 1.18, From Rails to Hanami, Full Stack Automation with Ruby, Spected и прочее"
 date: 2017-06-19
 tags:
  - podcasts
@@ -16,27 +16,14 @@ main_image: "/images/static/05/0524.png"
 
 ## Ruby
 
- - [Ruby 2.4 added Hash#transform_values and its destructive version from Active Support](https://blog.bigbinary.com/2017/06/14/ruby-2-4-added-hash-transform-values-and-its-destructive-version-from-active-support.html)
- - [Ruby 2.4 allows to customize suffix of the rotated log files](http://blog.bigbinary.com/2017/06/15/ruby-2-4-allows-to-customize-suffix-of-the-rotated-log-files.html)
- - [Common Table Expressions in ActiveRecord: A Case Study of Quantiles](https://sonnym.github.io/2017/06/05/common-table-expressions-in-activerecord-a-case-study-of-quantiles/)
- - [Rails to Hanami](http://io.bilby91.com/posts/rails-to-hanami)
- - [From Rails to Hanami: Views](https://blog.codeminer42.com/from-rails-to-hanami-views-66d27bcba404)
- - [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
- - [Full Stack Automation with Ruby](http://fullstackautomationwithruby.com/)
- - [Managing Rails tasks such as 'db:migrate' and 'db:seed' on Kubernetes while performing rolling deployments](http://blog.bigbinary.com/2017/06/16/managing-rails-tasks-such-as-db-migrate-and-db-seed-on-kuberenetes-while-performing-rolling-deployments.html)
- - [GoF design patterns in Ruby](https://github.com/davidgf/design-patterns-in-ruby)
- - [Demystifying Rails (book)](https://launchschool.com/books/demystifying_rails)
+ - [Ruby 2.4 added Hash#transform_values and its destructive version from Active Support](https://blog.bigbinary.com/2017/06/14/ruby-2-4-added-hash-transform-values-and-its-destructive-version-from-active-support.html), [Ruby 2.4 allows to customize suffix of the rotated log files](http://blog.bigbinary.com/2017/06/15/ruby-2-4-allows-to-customize-suffix-of-the-rotated-log-files.html) и [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
+ - [From Rails to Hanami: Views](https://blog.codeminer42.com/from-rails-to-hanami-views-66d27bcba404), [Rails to Hanami](http://io.bilby91.com/posts/rails-to-hanami) и [Common Table Expressions in ActiveRecord: A Case Study of Quantiles](https://sonnym.github.io/2017/06/05/common-table-expressions-in-activerecord-a-case-study-of-quantiles/)
+ - [Full Stack Automation with Ruby](http://fullstackautomationwithruby.com/), [GoF design patterns in Ruby](https://github.com/davidgf/design-patterns-in-ruby), [Laser - another Search Engine for Ruby](https://rubylaser.org/) и [Demystifying Rails (book)](https://launchschool.com/books/demystifying_rails)
 
 ## JavaScript
 
- - [Atom 1.18](http://blog.atom.io/2017/06/13/atom-1-18.html)
- - [Five ES6 features to make your life easier](https://engineering.musefind.com/five-es6-features-to-make-your-life-easier-8c6a9518219f)
-
-## В гостях - Anton Davydov
-
- - [Site](http://davydovanton.com/)
- - [Blog](http://blog.davydovanton.com/)
- - [Github](https://github.com/davydovanton)
- - [Twitter](https://twitter.com/anton_davydov)
+ - [Atom 1.18](http://blog.atom.io/2017/06/13/atom-1-18.html), [Angular 1.0 Turns Five Years Old](https://medium.com/dailyjs/angular-1-0-turns-five-years-old-4d7108a5e412) и [An Introduction to the 'fr' CSS unit](https://css-tricks.com/introduction-fr-css-unit/)
+ - [How to track changes in the DOM using Mutation Observer](https://blog.sessionstack.com/how-to-track-changes-in-the-dom-using-mutation-observer-bafdac65bca5), [Five ES6 features to make your life easier](https://engineering.musefind.com/five-es6-features-to-make-your-life-easier-8c6a9518219f) и [Lodash is not (only) for list manipulation](https://blog.pragmatists.com/lodash-is-not-only-for-list-manipulation-791c2e3b9de1)
+ - [Grab Front End Guide](https://github.com/grab/front-end-guide), [Spellbook of Modern Web Dev](https://github.com/dexteryy/spellbook-of-modern-webdev), [Spected - a low level validation library for validating objects against defined validation rules](https://github.com/25th-floor/spected) и [Highlight Within Textarea](http://lonekorean.github.io/highlight-within-textarea/)
 
 READMORE
