--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/05/0524.png"
 
 ## Ruby
 
- - [Ruby 2.4 added Hash#transform_values and its destructive version from Active Support](https://blog.bigbinary.com/2017/06/14/ruby-2-4-added-hash-transform-values-and-its-destructive-version-from-active-support.html), [Ruby 2.4 allows to customize suffix of the rotated log files](http://blog.bigbinary.com/2017/06/15/ruby-2-4-allows-to-customize-suffix-of-the-rotated-log-files.html) и [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
+ - [Ruby 2.4 added Hash#transform_values and its destructive version from Active Support](https://blog.bigbinary.com/2017/06/14/ruby-2-4-added-hash-transform-values-and-its-destructive-version-from-active-support.html), [Ruby 2.4 allows to customize suffix of the rotated log files](http://blog.bigbinary.com/2017/06/15/ruby-2-4-allows-to-customize-suffix-of-the-rotated-log-files.html), [Ruby 2.4 has deprecated toplevel constants TRUE, FALSE and NIL](http://blog.bigbinary.com/2017/06/19/ruby-2-4-has-depecated-constants-true-false-and-nil.html) и [MJIT - ~3x faster Ruby via JIT and a richer intermediate representation (IR)](https://github.com/vnmakarov/ruby/tree/rtl_mjit_branch#readme)
  - [From Rails to Hanami: Views](https://blog.codeminer42.com/from-rails-to-hanami-views-66d27bcba404), [Rails to Hanami](http://io.bilby91.com/posts/rails-to-hanami) и [Common Table Expressions in ActiveRecord: A Case Study of Quantiles](https://sonnym.github.io/2017/06/05/common-table-expressions-in-activerecord-a-case-study-of-quantiles/)
  - [Full Stack Automation with Ruby](http://fullstackautomationwithruby.com/), [GoF design patterns in Ruby](https://github.com/davidgf/design-patterns-in-ruby), [Laser - another Search Engine for Ruby](https://rubylaser.org/) и [Demystifying Rails (book)](https://launchschool.com/books/demystifying_rails)
 
