--- a/source/posts/2017/06-19-podcast-05-24.html.md
+++ b/source/posts/2017/06-19-podcast-05-24.html.md
@@ -26,4 +26,8 @@ main_image: "/images/static/05/0524.png"
  - [How to track changes in the DOM using Mutation Observer](https://blog.sessionstack.com/how-to-track-changes-in-the-dom-using-mutation-observer-bafdac65bca5), [Five ES6 features to make your life easier](https://engineering.musefind.com/five-es6-features-to-make-your-life-easier-8c6a9518219f) и [Lodash is not (only) for list manipulation](https://blog.pragmatists.com/lodash-is-not-only-for-list-manipulation-791c2e3b9de1)
  - [Grab Front End Guide](https://github.com/grab/front-end-guide), [Spellbook of Modern Web Dev](https://github.com/dexteryy/spellbook-of-modern-webdev), [Spected - a low level validation library for validating objects against defined validation rules](https://github.com/25th-floor/spected) и [Highlight Within Textarea](http://lonekorean.github.io/highlight-within-textarea/)
 
+## Conferences
+
+ - [Elixir Club 7](https://www.facebook.com/events/1250208718389089/)
+
 READMORE
