--- a/source/posts/2017/07-03-podcast-05-26.html.md
+++ b/source/posts/2017/07-03-podcast-05-26.html.md
@@ -22,11 +22,13 @@ main_image: "/images/static/05/0526.png"
  - [Rails 5.1 Deployment Checklist for Heroku](http://www.akitaonrails.com/2017/06/28/rails-5-1-heroku-deployment-checklist-for-heroku)
  - [Small Is Big - Architecting microservices with Sinatra and RabbitMq](https://medium.com/@gauravbasti2006/microservices-in-ruby-4888d757b35b)
  - [Readability of text using odyssey](https://blog.redpanthers.co/odyssey-in-rails/)
+ - [Unicorn Unix Magic Tricks](https://thorstenball.com/blog/2014/11/20/unicorn-unix-magic-tricks/)
  - [The Hidden Costs of Metaprogramming](http://www.blackbytes.info/2017/06/costs-of-metaprogramming/)
  - [Refactoring From Inheritance To Composition To Data](http://www.rubypigeon.com/posts/refactoring-inheritance-composition-data/)
  - [RailsCasts Pro episodes are now free](http://railscasts.com/announcements/13)
 
 ## JavaScript
 
+ - [Why Angular 2/4 Is Too Little, Too Late](https://medium.com/@chriscordle/why-angular-2-4-is-too-little-too-late-ea86d7fa0bae)
 
 READMORE
