--- a/source/posts/2017/07-03-podcast-05-26.html.md
+++ b/source/posts/2017/07-03-podcast-05-26.html.md
@@ -16,19 +16,18 @@ main_image: "/images/static/05/0526.png"
 
 ## Ruby
 
- - [Rails 5.1.2 has been released](http://weblog.rubyonrails.org/2017/6/26/Rails-5-1-2-has-been-released/)
- - [Ruby & The Strategy Pattern](https://medium.com/@joshsaintjacque/ruby-the-strategy-pattern-16c98b99b373)
- - [Value Objects in Ruby on Rails](https://revs.runtime-revolution.com/value-objects-in-ruby-on-rails-9df64bc8db34)
- - [Rails 5.1 Deployment Checklist for Heroku](http://www.akitaonrails.com/2017/06/28/rails-5-1-heroku-deployment-checklist-for-heroku)
- - [Small Is Big - Architecting microservices with Sinatra and RabbitMq](https://medium.com/@gauravbasti2006/microservices-in-ruby-4888d757b35b)
- - [Readability of text using odyssey](https://blog.redpanthers.co/odyssey-in-rails/)
- - [Unicorn Unix Magic Tricks](https://thorstenball.com/blog/2014/11/20/unicorn-unix-magic-tricks/)
- - [The Hidden Costs of Metaprogramming](http://www.blackbytes.info/2017/06/costs-of-metaprogramming/)
- - [Refactoring From Inheritance To Composition To Data](http://www.rubypigeon.com/posts/refactoring-inheritance-composition-data/)
- - [RailsCasts Pro episodes are now free](http://railscasts.com/announcements/13)
+ - [Rails 5.1.2 has been released](http://weblog.rubyonrails.org/2017/6/26/Rails-5-1-2-has-been-released/), [Rails 5.1 Deployment Checklist for Heroku](http://www.akitaonrails.com/2017/06/28/rails-5-1-heroku-deployment-checklist-for-heroku) и [Unicorn Unix Magic Tricks](https://thorstenball.com/blog/2014/11/20/unicorn-unix-magic-tricks/)
+ - [Small Is Big - Architecting microservices with Sinatra and RabbitMq](https://medium.com/@gauravbasti2006/microservices-in-ruby-4888d757b35b), [Refactoring From Inheritance To Composition To Data](http://www.rubypigeon.com/posts/refactoring-inheritance-composition-data/), [Ruby & The Strategy Pattern](https://medium.com/@joshsaintjacque/ruby-the-strategy-pattern-16c98b99b373) и [Value Objects in Ruby on Rails](https://revs.runtime-revolution.com/value-objects-in-ruby-on-rails-9df64bc8db34)
+ - [Readability of text using odyssey](https://blog.redpanthers.co/odyssey-in-rails/), [The Hidden Costs of Metaprogramming](http://www.blackbytes.info/2017/06/costs-of-metaprogramming/) и [RailsCasts Pro episodes are now free](http://railscasts.com/announcements/13)
 
 ## JavaScript
 
- - [Why Angular 2/4 Is Too Little, Too Late](https://medium.com/@chriscordle/why-angular-2-4-is-too-little-too-late-ea86d7fa0bae)
+ - [Why Angular 2/4 Is Too Little, Too Late](https://medium.com/@chriscordle/why-angular-2-4-is-too-little-too-late-ea86d7fa0bae), [Why We Chose Typescript](https://redditblog.com/2017/06/30/why-we-chose-typescript/) и [The Best Frontend JavaScript Interview Questions](https://performancejs.com/post/hde6d32/The-Best-List-of-Frontend-JavaScript-Interview-Questions-(written-by-a-Frontend-Engineer))
+ - [Browser module loading - can we stop bundling yet?](https://sgom.es/posts/2017-06-30-ecmascript-module-loading-can-we-unbundle-yet/), [React, Relay and GraphQL: Under the Hood of the Times Website Redesign](https://open.nytimes.com/react-relay-and-graphql-under-the-hood-of-the-times-website-redesign-22fb62ea9764) и [Under the hood: ReactJS](https://bogdan-lyashenko.github.io/Under-the-hood-ReactJS/)
+ - [React Native UI Kitten](https://akveo.github.io/react-native-ui-kitten/), [Stickybits: an alternative to 'position: sticky' polyfills](https://css-tricks.com/stickybits-alternative-position-sticky-polyfills/), [Share-this: Medium-like text sharing](https://maxart2501.github.io/share-this/) и [Bundlesize - keep your bundle size in check](https://github.com/siddharthkp/bundlesize)
+
+## Conferences
+
+ - [Ruby Meditation #16](https://www.facebook.com/events/1806051456322921/)
 
 READMORE
