--- a/source/posts/2017/07-03-podcast-05-26.html.md
+++ b/source/posts/2017/07-03-podcast-05-26.html.md
@@ -1,5 +1,5 @@
 ---
-title: "26 выпуск 05 сезона.  и прочее"
+title: "26 выпуск 05 сезона. Rails 5.1.2, Unicorn Unix Magic Tricks, Small Is Big, Browser module loading, React Native UI Kitten и прочее"
 date: 2017-07-03
 tags:
  - podcasts
@@ -25,6 +25,13 @@ main_image: "/images/static/05/0526.png"
  - [Why Angular 2/4 Is Too Little, Too Late](https://medium.com/@chriscordle/why-angular-2-4-is-too-little-too-late-ea86d7fa0bae), [Why We Chose Typescript](https://redditblog.com/2017/06/30/why-we-chose-typescript/) и [The Best Frontend JavaScript Interview Questions](https://performancejs.com/post/hde6d32/The-Best-List-of-Frontend-JavaScript-Interview-Questions-(written-by-a-Frontend-Engineer))
  - [Browser module loading - can we stop bundling yet?](https://sgom.es/posts/2017-06-30-ecmascript-module-loading-can-we-unbundle-yet/), [React, Relay and GraphQL: Under the Hood of the Times Website Redesign](https://open.nytimes.com/react-relay-and-graphql-under-the-hood-of-the-times-website-redesign-22fb62ea9764) и [Under the hood: ReactJS](https://bogdan-lyashenko.github.io/Under-the-hood-ReactJS/)
  - [React Native UI Kitten](https://akveo.github.io/react-native-ui-kitten/), [Stickybits: an alternative to 'position: sticky' polyfills](https://css-tricks.com/stickybits-alternative-position-sticky-polyfills/), [Share-this: Medium-like text sharing](https://maxart2501.github.io/share-this/) и [Bundlesize - keep your bundle size in check](https://github.com/siddharthkp/bundlesize)
+
+## В гостях - Anton Davydov
+
+ - [Site](http://davydovanton.com/)
+ - [Blog](http://blog.davydovanton.com/)
+ - [Github](https://github.com/davydovanton)
+ - [Twitter](https://twitter.com/anton_davydov)
 
 ## Conferences
 
