--- a/source/posts/2017/07-17-podcast-05-28.html.md
+++ b/source/posts/2017/07-17-podcast-05-28.html.md
@@ -16,19 +16,12 @@ main_image: "/images/static/05/0528.png"
 
 ## Ruby
 
- - [Redis 4.0 GA is out](https://groups.google.com/forum/#!msg/redis-db/5Kh3viziYGQ/58TKLwX0AAAJ)
- - [Lint your Ruby code with Overcommit and static analysis tools](https://medium.com/@kirill_shevch/lint-your-ruby-code-with-overcommit-and-static-analysis-tools-bd36d3147d2e)
- - [Everything You Need to Know About Ruby Constants](http://www.blackbytes.info/2017/07/ruby-constants/)
- - [My sins against Webpacker/Yarn and compiled Rails assets](https://dev.to/dstull/my-sins-against-webpackeryarn-and-compiled-rails-assets)
- - [Is Ruby Too Slow For Web-Scale?](https://www.speedshop.co/2017/07/11/is-ruby-too-slow-for-web-scale.html)
- - [Two tests you should run against your Ruby project now](https://philna.sh/blog/2017/07/12/two-tests-you-should-run-against-your-ruby-project-now/)
+ - [Is Ruby Too Slow For Web-Scale?](https://www.speedshop.co/2017/07/11/is-ruby-too-slow-for-web-scale.html), [Two tests you should run against your Ruby project now](https://philna.sh/blog/2017/07/12/two-tests-you-should-run-against-your-ruby-project-now/) и [Redis 4.0 GA is out](https://groups.google.com/forum/#!msg/redis-db/5Kh3viziYGQ/58TKLwX0AAAJ)
+ - [Lint your Ruby code with Overcommit and static analysis tools](https://medium.com/@kirill_shevch/lint-your-ruby-code-with-overcommit-and-static-analysis-tools-bd36d3147d2e), [Everything You Need to Know About Ruby Constants](http://www.blackbytes.info/2017/07/ruby-constants/) и [My sins against Webpacker/Yarn and compiled Rails assets](https://dev.to/dstull/my-sins-against-webpackeryarn-and-compiled-rails-assets)
 
 ## JavaScript
 
- - [NodeJS: Constant HashTable Seeds Vulnerability](https://medium.com/@ahmadbamieh/nodejs-constant-hashtables-seeds-vulnerability-f03bf70e3593)
- - [React or Vue — It's not a debate, It's a preference](https://medium.com/@tahnik.mstsn/react-or-vue-its-not-a-debate-it-s-a-preference-ec552da3504f)
- - [5 Things You Should Know About ES8](https://medium.com/@charpeni/5-things-you-should-know-about-es8-e4ccd955d883)
- - [High Performance React: 3 New Tools to Speed Up Your Apps](https://medium.freecodecamp.org/make-react-fast-again-tools-and-techniques-for-speeding-up-your-react-app-7ad39d3c1b82)
- - [Reducing CSS bundle size 70% by cutting the class names and using scope isolation](https://medium.freecodecamp.org/reducing-css-bundle-size-70-by-cutting-the-class-names-and-using-scope-isolation-625440de600b)
+ - [NodeJS: Constant HashTable Seeds Vulnerability](https://medium.com/@ahmadbamieh/nodejs-constant-hashtables-seeds-vulnerability-f03bf70e3593), [High Performance React: 3 New Tools to Speed Up Your Apps](https://medium.freecodecamp.org/make-react-fast-again-tools-and-techniques-for-speeding-up-your-react-app-7ad39d3c1b82) и [Reducing CSS bundle size 70% by cutting the class names and using scope isolation](https://medium.freecodecamp.org/reducing-css-bundle-size-70-by-cutting-the-class-names-and-using-scope-isolation-625440de600b)
+ - [React or Vue — It's not a debate, It's a preference](https://medium.com/@tahnik.mstsn/react-or-vue-its-not-a-debate-it-s-a-preference-ec552da3504f), [5 Things You Should Know About ES8](https://medium.com/@charpeni/5-things-you-should-know-about-es8-e4ccd955d883)
 
 READMORE
