--- a/source/posts/2017/07-17-podcast-05-28.html.md
+++ b/source/posts/2017/07-17-podcast-05-28.html.md
@@ -18,6 +18,7 @@ main_image: "/images/static/05/0528.png"
 
  - [Is Ruby Too Slow For Web-Scale?](https://www.speedshop.co/2017/07/11/is-ruby-too-slow-for-web-scale.html), [Two tests you should run against your Ruby project now](https://philna.sh/blog/2017/07/12/two-tests-you-should-run-against-your-ruby-project-now/) и [Redis 4.0 GA is out](https://groups.google.com/forum/#!msg/redis-db/5Kh3viziYGQ/58TKLwX0AAAJ)
  - [Lint your Ruby code with Overcommit and static analysis tools](https://medium.com/@kirill_shevch/lint-your-ruby-code-with-overcommit-and-static-analysis-tools-bd36d3147d2e), [Everything You Need to Know About Ruby Constants](http://www.blackbytes.info/2017/07/ruby-constants/) и [My sins against Webpacker/Yarn and compiled Rails assets](https://dev.to/dstull/my-sins-against-webpackeryarn-and-compiled-rails-assets)
+ - [Implementing inheritance with params: CreateProducts < ActiveRecord::Migration[5.0]](http://rubyblog.pro/2017/07/implementing-inheritance-with-params)
 
 ## JavaScript
 
