--- a/source/posts/2017/07-17-podcast-05-28.html.md
+++ b/source/posts/2017/07-17-podcast-05-28.html.md
@@ -1,5 +1,5 @@
 ---
-title: "28 выпуск 05 сезона.  и прочее"
+title: "28 выпуск 05 сезона. Is Ruby Too Slow For Web-Scale?, Redis 4.0 GA, NodeJS: Constant HashTable Seeds Vulnerability и прочее"
 date: 2017-07-17
 tags:
  - podcasts
@@ -21,7 +21,7 @@ main_image: "/images/static/05/0528.png"
 
 ## JavaScript
 
- - [NodeJS: Constant HashTable Seeds Vulnerability](https://medium.com/@ahmadbamieh/nodejs-constant-hashtables-seeds-vulnerability-f03bf70e3593), [High Performance React: 3 New Tools to Speed Up Your Apps](https://medium.freecodecamp.org/make-react-fast-again-tools-and-techniques-for-speeding-up-your-react-app-7ad39d3c1b82) и [Reducing CSS bundle size 70% by cutting the class names and using scope isolation](https://medium.freecodecamp.org/reducing-css-bundle-size-70-by-cutting-the-class-names-and-using-scope-isolation-625440de600b)
- - [React or Vue — It's not a debate, It's a preference](https://medium.com/@tahnik.mstsn/react-or-vue-its-not-a-debate-it-s-a-preference-ec552da3504f), [5 Things You Should Know About ES8](https://medium.com/@charpeni/5-things-you-should-know-about-es8-e4ccd955d883)
+ - [NodeJS: Constant HashTable Seeds Vulnerability](https://medium.com/@ahmadbamieh/nodejs-constant-hashtables-seeds-vulnerability-f03bf70e3593), [High Performance React: 3 New Tools to Speed Up Your Apps](https://medium.freecodecamp.org/make-react-fast-again-tools-and-techniques-for-speeding-up-your-react-app-7ad39d3c1b82), [Emotion - the Next Generation of CSS-in-JS](https://medium.com/@tkh44/emotion-ad1c45c6d28b) и [Reducing CSS bundle size 70% by cutting the class names and using scope isolation](https://medium.freecodecamp.org/reducing-css-bundle-size-70-by-cutting-the-class-names-and-using-scope-isolation-625440de600b)
+ - [React or Vue — It's not a debate, It's a preference](https://medium.com/@tahnik.mstsn/react-or-vue-its-not-a-debate-it-s-a-preference-ec552da3504f), [5 Things You Should Know About ES8](https://medium.com/@charpeni/5-things-you-should-know-about-es8-e4ccd955d883) и [Pell - the simplest and smallest WYSIWYG text editor for web, with no dependencies](https://jaredreich.com/pell)
 
 READMORE
