--- a/source/posts/2017/07-17-podcast-05-28.html.md
+++ b/source/posts/2017/07-17-podcast-05-28.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0528.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.28/0528.mp3"
 audio_format: "audio/mpeg"
-audio_length: 28844198
-duration: "00:30:01"
+audio_length: 68981240
+duration: "01:11:49"
 small_icon: mic
 main_image: "/images/static/05/0528.png"
 ---
@@ -23,5 +23,10 @@ main_image: "/images/static/05/0528.png"
 
  - [NodeJS: Constant HashTable Seeds Vulnerability](https://medium.com/@ahmadbamieh/nodejs-constant-hashtables-seeds-vulnerability-f03bf70e3593), [High Performance React: 3 New Tools to Speed Up Your Apps](https://medium.freecodecamp.org/make-react-fast-again-tools-and-techniques-for-speeding-up-your-react-app-7ad39d3c1b82), [Emotion - the Next Generation of CSS-in-JS](https://medium.com/@tkh44/emotion-ad1c45c6d28b) и [Reducing CSS bundle size 70% by cutting the class names and using scope isolation](https://medium.freecodecamp.org/reducing-css-bundle-size-70-by-cutting-the-class-names-and-using-scope-isolation-625440de600b)
  - [React or Vue — It's not a debate, It's a preference](https://medium.com/@tahnik.mstsn/react-or-vue-its-not-a-debate-it-s-a-preference-ec552da3504f), [5 Things You Should Know About ES8](https://medium.com/@charpeni/5-things-you-should-know-about-es8-e4ccd955d883) и [Pell - the simplest and smallest WYSIWYG text editor for web, with no dependencies](https://jaredreich.com/pell)
+
+## В гостях - Olya Burlaka
+
+ - [Github](https://github.com/scarlet1986)
+ - [Linked](https://www.linkedin.com/in/olga-burlaka-a13920101/)
 
 READMORE
