--- a/source/posts/2017/07-24-podcast-05-29.html.md
+++ b/source/posts/2017/07-24-podcast-05-29.html.md
@@ -16,7 +16,14 @@ main_image: "/images/static/05/0529.png"
 
 ## Ruby
 
+ - [Introducing Racecar - a simple framework for writing Kafka consumers in Ruby](https://medium.com/zendesk-engineering/introducing-racecar-fdb5178bcafb)
+ - [How I Reduced my DB Server Load by 80%](https://schneems.com/2017/07/18/how-i-reduced-my-db-server-load-by-80/)
+ - [Monitor and Debug Bottlenecks in Sidekiq](https://buildingvts.com/monitor-and-debug-bottlenecks-in-sidekiq-9fb0b1d296cc)
  - [Ruby concurrency: in praise of condition variables](https://vaneyckt.io/posts/ruby_concurrency_in_praise_of_condition_variables/)
+ - [Benchmarking and Refactoring the content_for View Helper](https://www.driftingruby.com/episodes/benchmarking-and-refactoring-the-content_for-view-helper)
+ - [Enclose.IO - compiling your application into a single executable](http://enclose.io/)
+ - [RenderReact - pre-render and mount React components from Ruby](https://github.com/janlelis/render_react)
+ - [Practical Data Science with Ruby based tools](https://github.com/arbox/data-science-with-ruby)
 
 ## JavaScript
 
