--- a/source/posts/2017/07-24-podcast-05-29.html.md
+++ b/source/posts/2017/07-24-podcast-05-29.html.md
@@ -1,5 +1,5 @@
 ---
-title: "29 выпуск 05 сезона.  и прочее"
+title: "29 выпуск 05 сезона. Monitor and Debug Bottlenecks in Sidekiq, Enclose.IO, RenderReact, Popmotion, GPU.js и прочее"
 date: 2017-07-24
 tags:
  - podcasts
@@ -16,17 +16,14 @@ main_image: "/images/static/05/0529.png"
 
 ## Ruby
 
- - [Introducing Racecar - a simple framework for writing Kafka consumers in Ruby](https://medium.com/zendesk-engineering/introducing-racecar-fdb5178bcafb)
- - [How I Reduced my DB Server Load by 80%](https://schneems.com/2017/07/18/how-i-reduced-my-db-server-load-by-80/)
- - [Monitor and Debug Bottlenecks in Sidekiq](https://buildingvts.com/monitor-and-debug-bottlenecks-in-sidekiq-9fb0b1d296cc)
- - [Ruby concurrency: in praise of condition variables](https://vaneyckt.io/posts/ruby_concurrency_in_praise_of_condition_variables/)
- - [Benchmarking and Refactoring the content_for View Helper](https://www.driftingruby.com/episodes/benchmarking-and-refactoring-the-content_for-view-helper)
- - [Enclose.IO - compiling your application into a single executable](http://enclose.io/)
- - [RenderReact - pre-render and mount React components from Ruby](https://github.com/janlelis/render_react)
- - [Practical Data Science with Ruby based tools](https://github.com/arbox/data-science-with-ruby)
+ - [Monitor and Debug Bottlenecks in Sidekiq](https://buildingvts.com/monitor-and-debug-bottlenecks-in-sidekiq-9fb0b1d296cc) и [Ruby concurrency: in praise of condition variables](https://vaneyckt.io/posts/ruby_concurrency_in_praise_of_condition_variables/)
+ - [How I Reduced my DB Server Load by 80%](https://schneems.com/2017/07/18/how-i-reduced-my-db-server-load-by-80/), [Introducing Racecar - a simple framework for writing Kafka consumers in Ruby](https://medium.com/zendesk-engineering/introducing-racecar-fdb5178bcafb) и [Benchmarking and Refactoring the content_for View Helper](https://www.driftingruby.com/episodes/benchmarking-and-refactoring-the-content_for-view-helper)
+ - [Enclose.IO - compiling your application into a single executable](http://enclose.io/), [RenderReact - pre-render and mount React components from Ruby](https://github.com/janlelis/render_react) и [Practical Data Science with Ruby based tools](https://github.com/arbox/data-science-with-ruby)
 
 ## JavaScript
 
- - [Decaffeinating a Large CoffeeScript Codebase Without Losing Sleep](http://eng.datafox.com/javascript/2017/07/18/decaffeinating-large-coffeescript-codebase/)
+ - [Decaffeinating a Large CoffeeScript Codebase Without Losing Sleep](http://eng.datafox.com/javascript/2017/07/18/decaffeinating-large-coffeescript-codebase/) и [Hidden messages in JavaScript property names](https://www.stefanjudis.de/hidden-messages-in-javascript-property-names.html)
+ - [Critical CSS and Webpack: Automatically Minimize Render-Blocking CSS](https://vuejsdevelopers.com/2017/07/24/critical-css-webpack/), [The State of Internationalization in JavaScript](https://www.sitepen.com/blog/2017/07/19/the-state-of-internationalization-in-javascript/) и [Ten Things A Serious JavaScript Developer Should Learn](https://benmccormick.org/2017/07/19/ten-things-javascript/)
+ - [Popmotion - JavaScript motion engine](https://popmotion.io/), [GPU.js - GPU Accelerated JavaScript](http://gpu.rocks/), [Blockchain.js - a minimal blockchain command-line interface](https://github.com/seanseany/blockchain.js) и [Mesh - a JavaScript code editor that feels like a spreadsheet](https://github.com/chrispsn/mesh)
 
 READMORE
