--- a/source/posts/2017/07-31-podcast-05-30.html.md
+++ b/source/posts/2017/07-31-podcast-05-30.html.md
@@ -27,7 +27,9 @@ main_image: "/images/static/05/0530.png"
 ## JavaScript
 
  - [Flash & The Future of Interactive Content](https://blogs.adobe.com/conversations/2017/07/adobe-flash-update.html)
+ - [React 16 beta](https://github.com/facebook/react/issues/10294)
  - [Error Handling in React 16](https://facebook.github.io/react/blog/2017/07/26/error-handling-in-react-16.html)
  - [How I built a wind map with WebGL](https://blog.mapbox.com/how-i-built-a-wind-map-with-webgl-b63022b5537f)
+ - [What you should know to really understand the Node.js Event Loop](https://medium.com/the-node-js-collection/what-you-should-know-to-really-understand-the-node-js-event-loop-and-its-metrics-c4907b19da4c)
 
 READMORE
