--- a/source/posts/2017/07-31-podcast-05-30.html.md
+++ b/source/posts/2017/07-31-podcast-05-30.html.md
@@ -16,20 +16,14 @@ main_image: "/images/static/05/0530.png"
 
 ## Ruby
 
- - [How learning Elixr made me a better Ruby developer](https://www.amberbit.com/blog/2017/7/27/how-learning-elixir-made-me-better-ruby-developer/)
- - [Speedy JSON Endpoints with Rails](https://medium.com/companydev/speedy-json-endpoints-with-rails-b6130f757815)
- - [Handle sidekiq processing when one job saturates your workers and the rest queue up](http://blog.arkency.com/2017/07/sidekiq-slow-processing-one-job-saturates-workers-rest-queue-up/)
- - [What's the Difference Between Continuous Integration, Continuous Deployment and Continuous Delivery?](https://semaphoreci.com/blog/2017/07/27/what-is-the-difference-between-continuous-integration-continuous-deployment-and-continuous-delivery.html)
- - [How to deactivate User – Rails with Devise](https://blog.kodius.io/2017/07/26/how-to-deactivate-user-rails-with-devise/)
- - [Modeling has_many Relationships with DynamoDB](https://blog.codeship.com/modeling-has_many-relationships-with-dynamodb/)
- - [Shirt - a simple Unix shell written in pure Ruby](https://github.com/jstorimer/shirt)
+ - [What's the Difference Between Continuous Integration, Continuous Deployment and Continuous Delivery?](https://semaphoreci.com/blog/2017/07/27/what-is-the-difference-between-continuous-integration-continuous-deployment-and-continuous-delivery.html) и [How learning Elixr made me a better Ruby developer](https://www.amberbit.com/blog/2017/7/27/how-learning-elixir-made-me-better-ruby-developer/)
+ - [Handle sidekiq processing when one job saturates your workers and the rest queue up](http://blog.arkency.com/2017/07/sidekiq-slow-processing-one-job-saturates-workers-rest-queue-up/) и [Speedy JSON Endpoints with Rails](https://medium.com/companydev/speedy-json-endpoints-with-rails-b6130f757815)
+ - [Modeling has_many Relationships with DynamoDB](https://blog.codeship.com/modeling-has_many-relationships-with-dynamodb/), [How to deactivate User – Rails with Devise](https://blog.kodius.io/2017/07/26/how-to-deactivate-user-rails-with-devise/) и [Shirt - a simple Unix shell written in pure Ruby](https://github.com/jstorimer/shirt)
 
 ## JavaScript
 
- - [Flash & The Future of Interactive Content](https://blogs.adobe.com/conversations/2017/07/adobe-flash-update.html)
- - [React 16 beta](https://github.com/facebook/react/issues/10294)
- - [Error Handling in React 16](https://facebook.github.io/react/blog/2017/07/26/error-handling-in-react-16.html)
- - [How I built a wind map with WebGL](https://blog.mapbox.com/how-i-built-a-wind-map-with-webgl-b63022b5537f)
- - [What you should know to really understand the Node.js Event Loop](https://medium.com/the-node-js-collection/what-you-should-know-to-really-understand-the-node-js-event-loop-and-its-metrics-c4907b19da4c)
+ - [Flash & The Future of Interactive Content](https://blogs.adobe.com/conversations/2017/07/adobe-flash-update.html), [React 16 beta](https://github.com/facebook/react/issues/10294) и [Error Handling in React 16](https://facebook.github.io/react/blog/2017/07/26/error-handling-in-react-16.html)
+ - [What you should know to really understand the Node.js Event Loop](https://medium.com/the-node-js-collection/what-you-should-know-to-really-understand-the-node-js-event-loop-and-its-metrics-c4907b19da4c) и [How I built a wind map with WebGL](https://blog.mapbox.com/how-i-built-a-wind-map-with-webgl-b63022b5537f)
+ - [The JavaScript Way (book)](https://github.com/bpesquet/thejsway/#readme), [Fitty - makes text fit perfectly](https://rikschennink.github.io/fitty/) и [Spacetime - a lightweight way to manipulate, traverse, compare, and format dates and times across planet Earth](https://github.com/smallwins/spacetime)
 
 READMORE
