--- a/source/posts/2017/07-31-podcast-05-30.html.md
+++ b/source/posts/2017/07-31-podcast-05-30.html.md
@@ -1,5 +1,5 @@
 ---
-title: "30 выпуск 05 сезона.  и прочее"
+title: "30 выпуск 05 сезона. React 16 beta, Speedy JSON Endpoints with Rails, Flash & The Future of Interactive Content, Fitty и прочее"
 date: 2017-07-31
 tags:
  - podcasts
