--- a/source/posts/2017/07-31-podcast-05-30.html.md
+++ b/source/posts/2017/07-31-podcast-05-30.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0530.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.30/0530.mp3"
 audio_format: "audio/mpeg"
-audio_length: 37892104
-duration: "00:39:26"
+audio_length: 58224268
+duration: "01:00:37"
 small_icon: mic
 main_image: "/images/static/05/0530.png"
 ---
@@ -25,5 +25,10 @@ main_image: "/images/static/05/0530.png"
  - [Flash & The Future of Interactive Content](https://blogs.adobe.com/conversations/2017/07/adobe-flash-update.html), [React 16 beta](https://github.com/facebook/react/issues/10294) и [Error Handling in React 16](https://facebook.github.io/react/blog/2017/07/26/error-handling-in-react-16.html)
  - [What you should know to really understand the Node.js Event Loop](https://medium.com/the-node-js-collection/what-you-should-know-to-really-understand-the-node-js-event-loop-and-its-metrics-c4907b19da4c) и [How I built a wind map with WebGL](https://blog.mapbox.com/how-i-built-a-wind-map-with-webgl-b63022b5537f)
  - [The JavaScript Way (book)](https://github.com/bpesquet/thejsway/#readme), [Fitty - makes text fit perfectly](https://rikschennink.github.io/fitty/) и [Spacetime - a lightweight way to manipulate, traverse, compare, and format dates and times across planet Earth](https://github.com/smallwins/spacetime)
+
+## Oleh Perevertailo
+
+ - [Github](https://github.com/LegaKh)
+ - [Linkedin](https://www.linkedin.com/in/oleg-perevertaylo-48797393/)
 
 READMORE
