--- a/source/posts/2017/08-08-podcast-05-31.html.md
+++ b/source/posts/2017/08-08-podcast-05-31.html.md
@@ -1,35 +1,28 @@
 ---
-title: "30 выпуск 05 сезона. React 16 beta, Speedy JSON Endpoints with Rails, Flash & The Future of Interactive Content, Fitty и прочее"
-date: 2017-07-31
+title: "30 выпуск 05 сезона.  и прочее"
+date: 2017-08-08
 tags:
  - podcasts
-audio_url: "http://mp3.rwpod.com/podcasts/05/0530.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.30/0530.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/05/0531.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.31/0531.mp3"
 audio_format: "audio/mpeg"
 audio_length: 58224268
 duration: "01:00:37"
 small_icon: mic
-main_image: "/images/static/05/0530.png"
+main_image: "/images/static/05/0531.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
 
 ## Ruby
 
- - [Rails 5.1.3 released](http://weblog.rubyonrails.org/2017/8/3/Rails-5-1-3-released/)
- - [Avoid exception for dup on Integer](https://blog.bigbinary.com/2017/08/01/avoid-exceptions-for-dup-on-interger-and-similar-cases.html)
- - [Bundler and private dependencies](https://depfu.io/blog/2017/08/02/bundler-and-private-dependencies)
- - [Why it is just lazy to bad-mouth Ruby on Rails](http://www.akitaonrails.com/2017/08/03/why-is-it-just-lazy-to-bad-mouth-ruby-on-rails)
- - [Elixir Envy ᐅ Ruby](https://6ftdan.com/allyourdev/2017/08/03/elixir-envy-%E1%90%85-ruby/)
- - [5 Tips on Keeping Fit in IT as Rubyroid Labs Team Does](https://blog.rubyroidlabs.com/2017/07/it-health/)
- - [Advanced Enumeration with Ruby](https://blog.codeship.com/advanced-enumeration-with-ruby/)
- - [Orchparty - write your own orchestration config with a Ruby DSL that allows you to have mixins, imports and variables](https://github.com/jannishuebl/orchparty)
- - [Graphql-Guard - simple authorization gem for GraphQL](https://github.com/exAspArk/graphql-guard)
- - [Ordinare - sorts gems in your Gemfile alphabetically](https://github.com/nikolalsvk/ordinare)
+ - [Rails 5.1.3 released](http://weblog.rubyonrails.org/2017/8/3/Rails-5-1-3-released/), [Avoid exception for dup on Integer](https://blog.bigbinary.com/2017/08/01/avoid-exceptions-for-dup-on-interger-and-similar-cases.html) и [Why it is just lazy to bad-mouth Ruby on Rails](http://www.akitaonrails.com/2017/08/03/why-is-it-just-lazy-to-bad-mouth-ruby-on-rails)
+ - [Elixir Envy ᐅ Ruby](https://6ftdan.com/allyourdev/2017/08/03/elixir-envy-%E1%90%85-ruby/), [Advanced Enumeration with Ruby](https://blog.codeship.com/advanced-enumeration-with-ruby/) и [Bundler and private dependencies](https://depfu.io/blog/2017/08/02/bundler-and-private-dependencies)
+ - [5 Tips on Keeping Fit in IT as Rubyroid Labs Team Does](https://blog.rubyroidlabs.com/2017/07/it-health/), [Orchparty - write your own orchestration config with a Ruby DSL that allows you to have mixins, imports and variables](https://github.com/jannishuebl/orchparty), [Graphql-Guard - simple authorization gem for GraphQL](https://github.com/exAspArk/graphql-guard) и [Ordinare - sorts gems in your Gemfile alphabetically](https://github.com/nikolalsvk/ordinare)
 
 ## JavaScript
 
  - [Chrome release schedule](https://www.chromestatus.com/features/schedule)
- - [TensorFire - runs neural networks in the browser using WebGL](https://tenso.rs/)
+ - [TensorFire - runs neural networks in the browser using WebGL](https://tenso.rs/), [WTF.JS - a list of funny and tricky JavaScript examples](https://github.com/denysdovhan/wtfjs)
 
 READMORE
